--- a/AppGenerarFacturas/appsettings.json
+++ b/AppGenerarFacturas/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server:.;Database=DBGenerarFactura;Trusted_Connection:True;"
+    "DefaultConnection": "Server=.;Database=DBGenerarFactura;Trusted_Connection=True;Encrypt=false"
   }
 }
