--- a/AppGenerarFacturas/appsettings.json
+++ b/AppGenerarFacturas/appsettings.json
@@ -8,5 +8,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=DBGenerarFactura;Trusted_Connection=True;Encrypt=false"
+  },
+  "JsonWebTokenKeys": {
+    "ValidateIssuerSigningKey": true,
+    "IssuerSigningKey": "&#BWEAsN!w^nZ-[Lza)R.A-_Tkyg/E",
+    "ValidateIssuer": true,
+    "ValidIssuer": "https://localhost:7255",
+    "ValidateAudience": true,
+    "ValidAudience": "https://localhost:7255",
+    "ValidLifetime": true,
+    "RequiredExpirationTime": true
+
   }
 }
