api with jwt configured

--- a/AppGenerarFacturas/appsettings.json
+++ b/AppGenerarFacturas/appsettings.json
@@ -1,15 +1,16 @@
 {
+
   "AppSettings": {
-    "Token": "my top secret key"
+    "Key": "mytopsecretkeydragonball"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=.;Database=DBGenerarFactura;Trusted_Connection=True;Encrypt=false"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=DBGenerarFactura;Trusted_Connection=True;Encrypt=false"
   }
+}
